# animica-opencl-miner

./: README.md  pyproject.toml
opencl_miner/: __init__.py  cli.py  job.py  miner.py  scanner.py  stratum_client.py  stratum_protocol.py
opencl_miner/mining/: __init__.py  cpu_backend.py  device.py  errors.py  gpu_opencl.py  hash_search.py  nonce_domain.py  py.typed  templates.py  version.py
